[RELEASE] 7차 배포 (#88)
* Fix: Chane column of raffles and enum file

* fix: change raffle status enum

* Feat: Get raffles by goods & member

* Fix: Resolve repository and entity errors after merge

* Fix: ApiResponse return value changing list to DTO

* Fix: Update Repository to return Entity instead of DTO

* Fix: Reflect API changes in the codebase

* Fix: Code Refactoring

* Feat: Add from & of method, Refactoring winners -> draws

* Fix: Changing column of DTO

* Fix: NONWINNER -> NON_WINNER

* Fix: Rename draws endpoint

* Api 111 [feat] 상품 도메인 mockup 작성 (#14)

* fix : response 응모자수 추가

* fix : 상품 목록 조회 response 수정

* fix : 시드값 조회 api ur 수정

* feat : 상품 검색 mockup api 구현

* feat : 상품 파일 업로드 mockup api 구현

* fix : api 수정

* fix : mockup api 표시

* fix : requestParam 수정

* fix : swagger file 전송 수정

* feat : 페이징 및 검색 적용 (#16)

* Api 151 [feat] 상품 상세 정보 조회 API 응모자수 응답 추가 (#17)

* feat : 응모자 수 반환

* feat : 상품 수정 및 추가 reponse dto 분리

* [FEAT] ADMIN, USER mockup  (#15)

* feat:ADMIN, USER 목업API

* feat:사원 mockup API 수정

* feat:admin controller 삭제

* feat:DTO 수정

* feat:memberidDTO 수정

* Api 152 [feat] 상품 파일 업로드 (#19)

* feat : 엑셀 파일 업로드 api 추가

* feat : 주석 추가

* fix : response 수정

* fix: develop머지 후 누락된 코드 수정

* fix: raffles default 에러 수정

---------

Co-authored-by: wooing1084 <kmjung1515@naver.com>

* [FEAT] wishlist mockup API (#20)

* feat:위시리스트 mockup API

* feat:위시리스트 조회 mockup API수정

* feat:wishlistDTO 수량 추가

* feat : 파일 용량 제한 해제

* Api 148 jenkin cicd (#22)

* Create Dockerfile

* Create Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

* Update Jenkinsfile

* Update Dockerfile

* Update Dockerfile

* Update Jenkinsfile

* change expose port

* Webhook Test

* set branch to main

* Change Port

* set branch to main

* feat : 오브젝트 스토리지 추가

* feat : 오브젝트 스토리지 추가

* feat : 오브젝트 스토리지 추가

* Api 141 [FEAT] Draw&Raffle 도메인 목업코드 작성, 당첨자 상태관리 