@@ -1,6 +1,4 @@
 package com._pi.benepick.domain.penaltyHists.service;
-
-
 import com._pi.benepick.domain.members.entity.Members;
 import com._pi.benepick.domain.members.repository.MembersRepository;
 import com._pi.benepick.domain.penaltyHists.dto.PenaltyResponse.*;
@@ -13,10 +11,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,7 +29,7 @@ public class PenaltyHistsQueryServiceImpl implements PenaltyHistsQueryService
         PageRequest pageRequest = PageRequest.of(page, size);
         Page<PenaltyHists> penaltyHistsPage;
         int total=penaltyHistsRepository.countAllByMemberId_Id(members.getId());
-       penaltyHistsPage= penaltyHistsRepository.findAllByMemberId_Id(pageRequest,members.getId());
+       penaltyHistsPage= penaltyHistsRepository.findAllByMemberId_IdOrderByCreatedAtDesc(pageRequest,members.getId());
         List<PenaltyResponseDTO> result = penaltyHistsPage.stream()
                 .map(p -> PenaltyResponseDTO.builder()
                         .penaltyCount(p.getPenaltyCount())
@@ -42,7 +37,7 @@ public class PenaltyHistsQueryServiceImpl implements PenaltyHistsQueryService
                         .createdAt(p.getCreatedAt())
                         .content(p.getContent())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
        return PenaltyListResponseDTO.builder()
                .penaltyResponseDTOList(result)
